Fix functionality on mobile nav menu

--- a/_sass/_mobile.scss
+++ b/_sass/_mobile.scss
@@ -16,7 +16,8 @@
             .expand-nav {
                 display: inline;
                 float: right;
-                padding-top: 2em;          
+                padding-top: 2em;
+                cursor: pointer;     
             }
 
             &:after {
@@ -83,11 +84,11 @@
 
         .intro {
             h1 {
-                font-size: 2em;
+                font-size: 1.7em;
             }
 
             h2 {
-                font-size: 1.5em;
+                font-size: 1.2em;
             }
         }
     }
